# Resource-allocation-system

Resource-allocation/: main.py  pyproject.toml  tfytfyftyf.json
Resource-allocation/core/models/: character.py
Resource-allocation/ui/: hierarchy_view.py  ui_main_window.py
SolonQtPy/core/models/: connection.py  node.py  project_model.py
SolonQtPy/core/services/: project_io.py
SolonQtPy/ui/: connection_dialog.py  hierarchy_window.py  main_window.py  main_window.ui  node_dialog.py
